refactor: Collectors.toList() 스트림 최종 연산을 toList()로 변경