@@ -3,7 +3,6 @@ package roomescape.service;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import roomescape.domain.ReservationTime;
@@ -39,7 +38,8 @@ public class ReservationTimeService {
 
     public List<ReservationTimeResponseDTO> findAllReservationTime() {
         return reservationTimeRepository.findAll().stream()
-                .map(ReservationTimeResponseDTO::from).collect(Collectors.toList());
+                .map(ReservationTimeResponseDTO::from)
+                .toList();
     }
 
     public List<ReservationTime> findReservedTimes(LocalDate selectedDate, Long themeId) {
